[metadata]
name = bannedk8skinds
version = 1.0.0
description = Basic banning of Kubernetes YAML based on kinds... like Secret
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nicholasmhughes/pre-commit-bannedk8skinds
author = Nicholas Hughes
author_email = devops@eitr.tech
license = Apache 2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.16.12
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    bannedk8skinds = bannedk8skinds.bannedk8skinds:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
